@@ -141,7 +141,7 @@ WebUI Settings:&nbsp;<input style="display:none" type="file" id="import_file" ac
 		<td colspan="1" align="right" id="external_ip0" style="font-weight:bold">
 		<td colspan="2" align="right" id="external_others" style="font-size:70%;font-style:italic;overlay-x:">
 	<tr title="Public Authorization Key"><td>Auth Key:
-		<td colspan="3" align="left" class="small"><b><!--PUB_AUTH_KEY--></b>
+		<td colspan="3" align="left" class="small"><b>@<!--PUB_AUTH_KEY--></b>
 	</table>
 <td valign="top">
 	<h2>Node</h2>
