@@ -38,7 +38,7 @@ Listening for incoming TCP connections: <b>{LISTEN_TCP}</b>
 <tr><td colspan="2" align="right">
 	<textarea name="friends_file" id="friends_file_el" style="width:600px" rows="12">{FRIENDS_TXT}</textarea>
 	<br>
-	<i>Valid line shall start with an IP address or base58 encoded Public Authorization Key</i>
+	<i>Valid lines contain hostname:port or @AuthKey (base58). Use # for comments.</i>
 <tr><td align="center">
 	<td align="right">
 	<input type="button" value="Cancel" onclick="cancel_friends()">
