@@ -17,6 +17,7 @@
  * Client: Added protection for a possible lock-up inside network's TickRecv() and TickSent()
  * Package "github.com/tyler-smith/go-bip39" placed in "lib/others/bip39" (with modifications)
  * New tool "bip39wal" - Mnemonic Code Converter with BIP32 Derivation Path (https://iancoleman.io/bip39/)
+ * Client: Improved way of parsing friends.txt file. Base58 encoded AuthKey must now start with extra @ character
 
 1.9.8 - 2020-07-09
 * New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
